<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/applogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/join_eshop"
        android:textColor="@color/md_theme_primary"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/md_theme_primary"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/signup_input_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input_search"
        android:hint="Dhananjaya"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/md_theme_primary"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/signup_input_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input_search"
        android:hint="user@example.com"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp" />





    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="password"
        android:textColor="@color/md_theme_primary"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/signup_input_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input_search"
        android:hint="*******"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/password__characrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        android:text="@string/password_must_be_6_charactors"
        android:textColor="@color/md_theme_primary"
        android:textSize="12sp" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retype_password"
        android:textColor="@color/md_theme_primary"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/signup_ReType_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input_search"
        android:hint="*******"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp" />






    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn_signup"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_on_account"
        android:textSize="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in" />


</LinearLayout>