<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Shipping Details"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/md_theme_primary"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/shipping_details_name"

            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_search"
            android:hint="Dhananjaya"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/md_theme_primary"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/shipping_details_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_search"
            android:hint="Dhananjaya@gamil.com"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:textColor="@color/md_theme_primary"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/shipping_contact_no"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_search"
            android:hint="(###) ###-####"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_line_1"
            android:textColor="@color/md_theme_primary"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/shipping_address_line_1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_search"
            android:hint="Address Line 1"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_line_2"
            android:textColor="@color/md_theme_primary"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/shipping_address_line_2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_search"
            android:hint="Address Line 2"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/md_theme_primary"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/shipping_city"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_search"
            android:hint="city"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"
            android:textColor="@color/md_theme_primary"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/shipping_postal_code"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input_search"
            android:hint="postal code"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="Billing addresss same as shipping" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Billing Details"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/md_theme_primary"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/billing_details_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input_search"
                android:hint="Dhananjaya"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/md_theme_primary"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/billing_details_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input_search"
                android:hint="Dhananjaya@gamil.com"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_no"
                android:textColor="@color/md_theme_primary"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/billing_contact_no"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input_search"
                android:hint="(###) ###-####"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_line_1"
                android:textColor="@color/md_theme_primary"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/billing_address_line_1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input_search"
                android:hint="Address Line 1"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_line_2"
                android:textColor="@color/md_theme_primary"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/billing_address_line_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input_search"
                android:hint="Address Line 2"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/md_theme_primary"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/billing_city"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input_search"
                android:hint="city"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postal_code"
                android:textColor="@color/md_theme_primary"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/billing_postal_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input_search"
                android:hint="postal code"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Billing addresss same as shipping"
                android:checked="true"
                />




        </LinearLayout>
        <com.google.android.material.button.MaterialButton
           android:id="@+id/checkout_btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Proceed to Paymemt"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>


</ScrollView>